@@ -36,6 +36,8 @@
 #define SCANCODE_ESCAPE 1
 #define SCANCODE_MINUS 12
 #define SCANCODE_EQUAL 13
+#define SCANCODE_BRACKET_LEFT 26
+#define SCANCODE_BRACKET_RIGHT 27
 #define SCANCODE_F1 59
 #define SCANCODE_F2 60
 #define SCANCODE_F3 61
