@@ -60,17 +60,21 @@
 #define HS_RUNOPT0_CFG_B 65
 #define HS_RUNOPT0_CFG_Y 66
 #define HS_RUNOPT0_CFG_X 67
-#define HS_RUNOPT0_JDEADZ_DN 68
-#define HS_RUNOPT0_JDEADZ_UP 69
-#define HS_RUNOPT0_SAVE 70
-#define HS_RUNOPT0_EXIT 71
-#define HS_RUNOPT0_NEXT 72
-#define HS_RUNOPT1_RUNOPT1 73
-#define HS_RUNOPT1_VOLUME_DN 74
-#define HS_RUNOPT1_VOLUME_UP 75
-#define HS_RUNOPT1_BACK 76
-#define HS_RUNOPT1_SAVE 77
-#define HS_RUNOPT1_EXIT 78
+#define HS_RUNOPT0_SAVE 68
+#define HS_RUNOPT0_EXIT 69
+#define HS_RUNOPT0_NEXT 70
+#define HS_RUNOPT1_RUNOPT1 71
+#define HS_RUNOPT1_VOLUME_DN 72
+#define HS_RUNOPT1_VOLUME_UP 73
+#define HS_RUNOPT1_KRDELAY_DN 74
+#define HS_RUNOPT1_KRDELAY_UP 75
+#define HS_RUNOPT1_KRINTERVAL_DN 76
+#define HS_RUNOPT1_KRINTERVAL_UP 77
+#define HS_RUNOPT1_JDEADZ_DN 78
+#define HS_RUNOPT1_JDEADZ_UP 79
+#define HS_RUNOPT1_BACK 80
+#define HS_RUNOPT1_SAVE 81
+#define HS_RUNOPT1_EXIT 82
 
 /* Hotspot properties */
 #define HS_PROP_ONOFF 1
