@@ -1397,15 +1397,15 @@ void manage_runopt_input(void) {
 					}
 				}
 			}
-		} else if (id == SDLK_INSERT || id == SDLK_DELETE) {
+		} else if (id == SDLK_LEFTBRACKET || id == SDLK_RIGHTBRACKET) {
 			/* Joy Dead Zone < and > */
-			if (runtime_options0.state) {
+			if (runtime_options1.state) {
 				if (state == SDL_PRESSED) {
 					key_repeat_manager(KRM_FUNC_REPEAT, &event, COMP_RUNOPT0 * id);
-					if (id == SDLK_INSERT && joystick_dead_zone > 1) {
-						joystick_dead_zone--;
-					} else if (id == SDLK_DELETE && joystick_dead_zone < 99) {
-						joystick_dead_zone++;
+					if (id == SDLK_LEFTBRACKET && joystick_dead_zone > 2) {
+						joystick_dead_zone -= 2;
+					} else if (id == SDLK_RIGHTBRACKET && joystick_dead_zone < 98) {
+						joystick_dead_zone += 2;
 					}
 				} else {
 					key_repeat_manager(KRM_FUNC_RELEASE, NULL, 0);
@@ -1505,6 +1505,8 @@ int keysym_to_scancode(int reverse, int value) {
 			case SDLK_ESCAPE: return SCANCODE_ESCAPE;
 			case SDLK_MINUS: return SCANCODE_MINUS;
 			case SDLK_EQUALS: return SCANCODE_EQUAL;
+			case SDLK_LEFTBRACKET: return SCANCODE_BRACKET_LEFT;
+			case SDLK_RIGHTBRACKET: return SCANCODE_BRACKET_RIGHT;
 			case SDLK_F1: return SCANCODE_F1;
 			case SDLK_F2: return SCANCODE_F2;
 			case SDLK_F3: return SCANCODE_F3;
@@ -1573,6 +1575,8 @@ int keysym_to_scancode(int reverse, int value) {
 			case SCANCODE_ESCAPE: return SDLK_ESCAPE;
 			case SCANCODE_MINUS: return SDLK_MINUS;
 			case SCANCODE_EQUAL: return SDLK_EQUALS;
+			case SCANCODE_BRACKET_LEFT: return SDLK_LEFTBRACKET;
+			case SCANCODE_BRACKET_RIGHT: return SDLK_RIGHTBRACKET;
 			case SCANCODE_F1: return SDLK_F1;
 			case SCANCODE_F2: return SDLK_F2;
 			case SCANCODE_F3: return SDLK_F3;
